# fraud-investigation-agent

./: .gitignore  ARCHITECTURE.md  DIAGRAMS.md  Dockerfile  Makefile  README.md  SCOPE.md  docker-compose.yml  pyproject.toml
agent/: __init__.py  cli.py  llm.py  memory.py  orchestrator.py  prompts.py  tools.py
api/: server.py
eval/: __main__.py  analysis.md  run_eval.py  scenarios.json
eval/results/: baseline_run.json
tests/: test_memory.py  test_orchestrator.py  test_tools.py
