[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud-investigation-agent"
version = "0.1.0"
description = "Multi-turn fraud investigation agent built on BGI Trident"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Abhinav Khare"}]

dependencies = [
    "anthropic>=0.39.0",
    "openai>=1.50.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]
trident = [
    "trident-payment-fraud @ git+https://github.com/AbhinavKhareTech/trident-payment-fraud.git",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["agent*", "api*", "eval*"]
